# rustpad

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
rustpad-client/: Cargo.toml
rustpad-client/src/: client.rs  coeditor.rs  editor.rs  editor_binding.rs  main.rs  rope.rs  transformer.rs
rustpad-client/src/code_editor/: code_editor.rs  mod.rs
rustpad-client/src/code_editor/text/: attribute.rs  backspace.rs  editable_text.rs  font_descriptor.rs  format.rs  input_component.rs  layout.rs  mod.rs  movement.rs  rich_text.rs  storage.rs
rustpad-server/src/: lib.rs  rustpad.rs
